# FeignRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  change_log.txt  classnotes.txt  code_design.txt  features.txt  long_list_of_todos.txt  notes.txt  readme.md  tasklist.txt  todo.txt  todo_list.txt
documentation/: accel.html  api.html  bsdf.html  camera.html  documentation.html  emitter.html  future.html  integrator.html  material.html  media.html  recon_filter.html  sampler.html  shader.html  shape.html  texture.html  unit_tests.html
include/feign/: common.h  exceptions.h  node.h  scene.h
include/feign/accel/: accel.h  bbh.h  bvh.h  embree.h  naive.h
include/feign/api/: api.h
include/feign/bsdfs/: brdf.h  bsdf.h  diffuse.h
include/feign/cameras/: camera.h  ortho.h  perspective.h
include/feign/core/: accel.h  accel_light.h  accel_photons.h  accel_ray.h  api.h  bsdf.h  camera.h  closure.h  emitter.h  factory.h  integrator.h  material.h  node.h  recon_filter.h  sampler.h  scene.h  sdf.h  shader.h  shape.h  texture.h
include/feign/emitters/: directional.h  distant.h  emitter.h  environment.h  point.h
include/feign/filters/: box_filter.h  gauss_filter.h  recon_filter.h
include/feign/integrators/: amb_occ.h  integrator.h  light_unidir.h  normal.h  path_bidir.h  path_unidir.h  whitted.h
include/feign/log/: logger.h
include/feign/materials/: material.h
include/feign/math/: bbox.h  complex.h  coord_frame.h  discrete_pdf.h  functor.h  interp.h  noise.h  ray.h  spectrum.h  transform.h  vector.h  warp.h
include/feign/media/: density_func.h  media.h  phase.h  sampling.h  trans_est.h  trans_func.h
include/feign/misc/: embree_util.h  floatprim.h  intersection.h  intprim.h  medium_boundry.h  prim.h  primlist.h  render_pool.h  scene_generator.h  stringprim.h  transformnode.h  world.h
include/feign/parser/: json_parser.h  parser.h  token.h
include/feign/parsers/: json_parser.h
include/feign/phase/: phase.h
include/feign/samplers/: halton.h  independent.h  latin.h  sampler.h
include/feign/shapes/: grid_obj.h  mesh.h  objmesh.h  shape.h  triangle.h
include/feign/stats/: clocker.h
include/feign/test/: tester.h
include/feign/textures/: texture.h
include/tests/: bbox_test.h  json_test.h  matrix_test.h  ray_intersect_test.h  test.h  tester.h  transform_test.h  vector_test.h
scenes/: ajax-normals-generated.json  ajax-normals-nori.xml  ajax-normals-old.firal  ajax-normals.firal  scene_file_format.txt
scenes/adrien/: ajax_cosine.h  neon_intro.h  neon_take_2.h  sandbox.h  sphere_ground.h
scenes/cool_renders/adrien_logo/: adrien_logo.cpp  adrien_logo.h
scenes/cool_renders/fractal_media/: mandlebrot_media.cpp  mandlebrot_media.h
scenes/cool_renders/hall_of_tiles/: hall_of_tiles.cpp  hall_of_tiles.h  tile_effects.h
scenes/cool_renders/lin_non_exp/: lin_non_exp.cpp  lin_non_exp.h
scenes/cool_renders/one_way_dice/: one_way_dice.cpp  one_way_dice.h
scenes/cool_renders/wolf_head/: wolf_head.cpp  wolf_head.h
scenes/debugging/: medium_testing.cpp  medium_testing.h
scenes/month_of_shaders/: jan_1_2020.h  jan_2_2020.h  jan_3_2020.h  jan_4_2020.h  jan_5_2020.h  jan_6_2020.h  jan_7_2020.h  jan_8_2020.h  jan_9_2020.h
scenes/shadertoy_recreations/: include.h
scenes/shadertoy_recreations/vol_exp/: vol_exp.cpp  vol_exp.h
scenes/tests/: ajax_bary.json  ajax_diffuse.json  ajax_mirror.json  ajax_normals.json  box_distant.json  box_rotations.json  cornell_box_dielectrics.json  cornell_box_diffuse.json  cornell_box_diffuse_area_light.json  cornell_box_phong.json  spot_light.json
scenes/unit_tests/in_progress/: test_015.json  test_016.json  test_024.json  test_025.json  test_028.json  test_033.json  test_035.json  test_036.json
scenes/unit_tests/scenes/: readme.txt  summary.txt  test_000.json  test_000_ref.exr  (+45 more)
scenes/usd/: readme.txt
scenes/videos/: medium_initial.cpp  medium_initial.h
src/: main.cpp  node.cpp  scene.cpp
src/accel/: accel.cpp  bbh.cpp  bvh.cpp  embree.cpp  light_naive.cpp  light_spatial.cpp  naive.cpp  photon_array.cpp  photon_bvh.cpp  ray_embree.cpp  ray_sdf.cpp  sdf.cpp
src/api/: api.cpp
src/bsdfs/: blinn.cpp  brdf.cpp  bsdf.cpp  dielectric.cpp  diffuse.cpp  mirror.cpp  null.cpp  one_way_dielectric.cpp  phong.cpp
src/cameras/: camera.cpp  ortho.cpp  perspective.cpp
src/closure/: material.cpp  photon.cpp
src/debug_integrators/: cosine_term.cpp  sandbox.cpp
src/emitters/: directional.cpp  directional_mesh.cpp  distant.cpp  emitter.cpp  environment.cpp  interp_env.cpp  mesh.cpp  photometric.cpp  point.cpp  spot.cpp
src/filters/: box_filter.cpp  gauss_filter.cpp  recon_filter.cpp
src/integrators/: amb_occ.cpp  barycentric.cpp  cosine_term.cpp  integrator.cpp  light_unidir.cpp  nice_normal.cpp  normal.cpp  path_bidir.cpp  path_unidir.cpp  photon.cpp  sandbox.cpp  volpath.cpp  volpath_nonexp.cpp  volpath_trans.cpp  whitted.cpp
src/log/: logger.cpp
src/materials/: material.cpp  radar.cpp  simple.cpp  wireframe.cpp
src/math/: coord_frame.cpp  discrete_pdf.cpp  ray.cpp  transform.cpp  vector.cpp  warp.cpp
src/media/: homo_abs.cpp  media.cpp  phase.cpp  standard.cpp
src/misc/: floatprim.cpp  intersection.cpp  intprim.cpp  prim.cpp  primlist.cpp  render_pool.cpp  stringprim.cpp  transformnode.cpp  world.cpp
src/parser/: json_parser.cpp  parser.cpp  token.cpp
src/parsers/: json_parser.cpp
src/phase/: phase.cpp
src/samplers/: halton.cpp  independent.cpp  latin.cpp  sampler.cpp
src/shaders/: interp_verts_to_sphere.cpp  material.cpp  radar_material.cpp  simple_material.cpp  wave_displacement.cpp  wireframe_material.cpp
src/shapes/: grid_obj.cpp  mesh.cpp  objmesh.cpp  sdf_box.cpp  sdf_cone.cpp  sdf_cylinder.cpp  sdf_interaction.cpp  sdf_plane.cpp  sdf_sphere.cpp  shape.cpp  triangle.cpp
src/stats/: clocker.cpp
src/test/: site_assembler.cpp  test.cpp  tester.cpp
src/tests/: bbox_test.cpp  json_test.cpp  matrix_test.cpp  ray_intersect_test.cpp  test.cpp  tester.cpp  transform_test.cpp  vector_test.cpp  vector_tests.cpp
src/textures/: image_texture.cpp  noise_texture.cpp  sin_texture.cpp  texture.cpp
(+47 files in other folders)
